# pixel-screen-recorder

./: package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Controllers.jsx  CropEdit.jsx  SoundEdit.jsx  SpeedEdit.jsx  TrimEdit.jsx  VideoContainer.jsx
